syntax = "proto3";

package batchfetcherpb;

option go_package = "github.com/filecoin-project/mir/pkg/pb/batchfetcherpb";

import "requestpb/requestpb.proto";
import "mir/plugin.proto";

message Event {
  oneof Type {
    option (mir.event_type) = true;
    NewOrderedBatch new_ordered_batch = 1;
  }
}

message NewOrderedBatch {
  repeated requestpb.Request txs = 1;
}
